Agregando contenido desde rama dev

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 Archivo en la rama hotfix, de ejercicio ramificar y fusionar
 Contenido en la rama issue#56
 Probando git branch --merged
+
+Agregando contenido rama DEV
