Comiteando desde rama creada con git stash branch NuevaStashBranch

--- a/index.html
+++ b/index.html
@@ -3,3 +3,4 @@ Contenido en la rama issue#56
 Probando git branch --merged
 
 Agregando contenido rama DEV
+Editando para ver git stash branch NombreRama
